--- a/MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -364,7 +364,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DhE-U5-qwR">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DhE-U5-qwR">
+                                <frame key="frameInset" minY="20" width="320" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qkn-HC-iMw">
                                     <size key="itemSize" width="50" height="50"/>
@@ -373,7 +374,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <imageView key="backgroundView" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="1nz-c9-7w0">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </imageView>
@@ -414,45 +415,8 @@
                                             <outlet property="stickerView" destination="5ps-tQ-gSb" id="dAa-94-D3F"/>
                                         </connections>
                                     </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="bp8-0F-CRl">
-                                        <rect key="frame" x="68" y="58" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7sm-gW-noM"/>
-                                                <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WNG-uY-DTJ" customClass="MSStickerView">
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                </view>
-                                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0h-Bl-Zp0">
-                                                    <accessibility key="accessibilityConfiguration" hint="Select to delete custom sticker" label="Delete button"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="20" id="0OF-lY-xvN"/>
-                                                        <constraint firstAttribute="width" secondItem="f0h-Bl-Zp0" secondAttribute="height" multiplier="1:1" id="Pgd-Eb-Tl7"/>
-                                                    </constraints>
-                                                    <state key="normal" image="DeleteInvert"/>
-                                                    <connections>
-                                                        <action selector="deleteButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="0kn-Pz-xgQ"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="7sm-gW-noM" firstAttribute="centerX" secondItem="bp8-0F-CRl" secondAttribute="centerX" id="5dU-YJ-esw"/>
-                                            <constraint firstItem="7sm-gW-noM" firstAttribute="height" secondItem="bp8-0F-CRl" secondAttribute="height" id="Kx7-Y6-ua1"/>
-                                            <constraint firstItem="WNG-uY-DTJ" firstAttribute="centerX" secondItem="bp8-0F-CRl" secondAttribute="centerX" id="OBH-pW-K06"/>
-                                            <constraint firstItem="7sm-gW-noM" firstAttribute="centerY" secondItem="bp8-0F-CRl" secondAttribute="centerY" id="RKy-BR-8fq"/>
-                                            <constraint firstItem="WNG-uY-DTJ" firstAttribute="centerY" secondItem="bp8-0F-CRl" secondAttribute="centerY" id="V5E-za-hoK"/>
-                                            <constraint firstItem="WNG-uY-DTJ" firstAttribute="height" secondItem="bp8-0F-CRl" secondAttribute="height" id="WP2-qj-bfE"/>
-                                            <constraint firstItem="f0h-Bl-Zp0" firstAttribute="leading" secondItem="bp8-0F-CRl" secondAttribute="leading" id="ZKN-Or-PQx"/>
-                                            <constraint firstItem="f0h-Bl-Zp0" firstAttribute="top" secondItem="bp8-0F-CRl" secondAttribute="top" id="na5-uf-ErX"/>
-                                            <constraint firstItem="7sm-gW-noM" firstAttribute="width" secondItem="bp8-0F-CRl" secondAttribute="width" id="oza-6r-JRA"/>
-                                            <constraint firstItem="WNG-uY-DTJ" firstAttribute="width" secondItem="bp8-0F-CRl" secondAttribute="width" id="uFb-HE-vdX"/>
-                                        </constraints>
-                                    </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddCell" id="ECw-9O-ETM">
-                                        <rect key="frame" x="135" y="58" width="50" height="50"/>
+                                        <rect key="frame" x="68" y="58" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -494,8 +458,8 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeaderGreen" translatesAutoresizingMaskIntoConstraints="NO" id="OuG-Lx-wcl"/>
                                         <view tag="10" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qHN-Ml-bZT">
                                             <subviews>
-                                                <button opaque="NO" tag="20" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8g-Os-kA4">
-                                                    <state key="normal" title="Play"/>
+                                                <button opaque="NO" tag="20" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8g-Os-kA4">
+                                                    <state key="normal" image="Play"/>
                                                     <connections>
                                                         <action selector="animatingButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="Jxw-c4-fnJ"/>
                                                     </connections>
@@ -566,45 +530,45 @@
                                                 <action selector="editButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="9eB-K7-gWW"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XU-sp-EL6" userLabel="All">
+                                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XU-sp-EL6" userLabel="Emoji">
                                             <accessibility key="accessibilityConfiguration" hint="Show all stickers" label="All button"/>
-                                            <state key="normal" image="All">
+                                            <state key="normal" image="Emoji">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
                                                 <action selector="stickerTypeButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="Xyh-SZ-Aw6"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TV4-VB-cXs" userLabel="Emoji">
+                                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TV4-VB-cXs" userLabel="Parts">
                                             <accessibility key="accessibilityConfiguration" hint="Show monster stickers" label="Monsters button"/>
-                                            <state key="normal" image="Emoji">
+                                            <state key="normal" image="Parts">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
                                                 <action selector="stickerTypeButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="FmM-ls-uwv"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5i-dd-b6m" userLabel="Parts">
+                                        <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5i-dd-b6m" userLabel="Accessories">
                                             <accessibility key="accessibilityConfiguration" hint="Show heads, eyes &amp; mouths of stickers" label="Parts button"/>
-                                            <state key="normal" image="Parts">
+                                            <state key="normal" image="Accessories">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
                                                 <action selector="stickerTypeButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="r9k-OB-WkA"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdK-QF-qP9" userLabel="Accessories">
+                                        <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdK-QF-qP9" userLabel="Text">
                                             <accessibility key="accessibilityConfiguration" hint="Show accessory stickers" label="Accessories button"/>
-                                            <state key="normal" image="Accessories">
+                                            <state key="normal" image="Text">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
                                                 <action selector="stickerTypeButtonPressed:" destination="hXf-jq-1q5" eventType="touchUpInside" id="tcc-CB-n3y"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgW-H7-ZDR" userLabel="Text">
+                                        <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgW-H7-ZDR" userLabel="All">
                                             <accessibility key="accessibilityConfiguration" hint="Show text stickers" label="Text button"/>
-                                            <state key="normal" image="Text">
+                                            <state key="normal" image="All">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -680,16 +644,10 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="DhE-U5-qwR" firstAttribute="centerX" secondItem="QYm-Bi-Fp9" secondAttribute="centerX" id="2gy-Or-VoU"/>
-                            <constraint firstItem="DhE-U5-qwR" firstAttribute="top" secondItem="dSE-gM-6cJ" secondAttribute="bottom" id="9iU-Kb-VEl"/>
                             <constraint firstItem="DhE-U5-qwR" firstAttribute="width" secondItem="QYm-Bi-Fp9" secondAttribute="width" id="AMc-NV-bEC"/>
                             <constraint firstItem="K32-iu-a9X" firstAttribute="top" secondItem="DhE-U5-qwR" secondAttribute="bottom" id="Bws-6M-aMK"/>
                             <constraint firstAttribute="topMargin" secondItem="DhE-U5-qwR" secondAttribute="top" id="S2W-kc-w9Q"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="9iU-Kb-VEl"/>
-                            </mask>
-                        </variation>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -721,6 +679,7 @@
         <image name="Medium" width="20" height="20"/>
         <image name="Mouth" width="20" height="20"/>
         <image name="Parts" width="20" height="20"/>
+        <image name="Play" width="20" height="20"/>
         <image name="Small" width="20" height="20"/>
         <image name="Text" width="20" height="20"/>
         <image name="Undo" width="44" height="44"/>
